Update starter pack to ES6

--- a/.jshintrc
+++ b/.jshintrc
@@ -89,8 +89,6 @@
 
     // Custom Globals
     "globals"       : {
-        "App": true,
-        "Partials": true,
-        "Utils": true
+        "Vue": true
     }
 }
