--- a/package.json
+++ b/package.json
@@ -1,76 +1,75 @@
 {
-    "name": "project",
-    "description": "Project Sample",
-    "version": "0.0.1",
-    "keywords": [],
-    "main": "gulpfile.js",
-    "authors": [
-        "Leandro Matos <leandro@is-uz.com>"
-    ],
-    "license": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "private": true,
-    "devDependencies": {
-        "aliasify": "^2.1.0",
-        "autoprefixer": "^6.5.1",
-        "babel-core": "^6.18.2",
-        "babel-plugin-transform-runtime": "^6.15.0",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-runtime": "^6.18.0",
-        "babelify": "^7.3.0",
-        "browserify": "^13.1.1",
-        "del": "^2.2.2",
-        "fs": "0.0.1-security",
-        "glob": "^7.1.1",
-        "gulp": "^3.9.1",
-        "gulp-browserify": "^0.5.1",
-        "gulp-clean-css": "^2.0.13",
-        "gulp-concat": "^2.6.0",
-        "gulp-data": "^1.2.1",
-        "gulp-esformatter": "^6.0.0",
-        "gulp-if": "^2.0.1",
-        "gulp-imagemin": "^3.1.1",
-        "gulp-jade": "^1.1.0",
-        "gulp-jshint": "^2.0.2",
-        "gulp-notify": "^2.2.0",
-        "gulp-plumber": "^1.1.0",
-        "gulp-postcss": "^6.2.0",
-        "gulp-sass": "^2.3.2",
-        "gulp-scss": "^1.4.0",
-        "gulp-scss-lint": "^0.4.0",
-        "gulp-scss-lint-stylish": "^1.0.1",
-        "gulp-sourcemaps": "^2.2.0",
-        "gulp-uglify": "^2.0.0",
-        "gulp-util": "^3.0.7",
-        "gulp-vueify": "0.0.3",
-        "jshint": "^2.9.4",
-        "jshint-stylish": "^2.2.1",
-        "lodash": "^4.16.6",
-        "minimist": "^1.2.0",
-        "node-sass": "^3.11.1",
-        "run-sequence": "^1.2.2",
-        "through2": "^2.0.1",
-        "vinyl-source-stream": "^1.1.0",
-        "vue": "^2.0.3",
-        "vue-hot-reload-api": "^2.0.6",
-        "vue-resource": "^1.0.3",
-        "vueify": "^9.2.4",
-        "vueify-insert-css": "^1.0.0"
-    },
-    "dependencies": {
-        "animate.css": "^3.5.2",
-        "bootstrap-sass": "^3.3.7",
-        "bourbon": "^4.2.7",
-        "bourbon-neat": "^1.8.0",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.1.1",
-        "neat": "^1.2.2"
-    },
-    "aliasify": {
-        "aliases": {
-            "vue": "vue/dist/vue.js"
-        }
+  "name": "project",
+  "description": "Project Sample",
+  "version": "0.0.1",
+  "keywords": [],
+  "main": "gulpfile.js",
+  "authors": [
+    "Leandro Matos <leandro@is-uz.com>"
+  ],
+  "license": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "private": true,
+  "devDependencies": {
+    "aliasify": "^2.1.0",
+    "animate.css": "^3.5.2",
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-runtime": "^6.22.0",
+    "babelify": "^7.3.0",
+    "bootstrap-sass": "^3.3.7",
+    "bourbon": "^4.3.0",
+    "bourbon-neat": "^1.8.0",
+    "browserify": "^14.0.0",
+    "del": "^2.2.2",
+    "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.1",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean-css": "^2.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-data": "^1.2.1",
+    "gulp-esformatter": "^6.1.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.3.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-scss": "^1.4.0",
+    "gulp-scss-lint": "^0.4.0",
+    "gulp-scss-lint-stylish": "^1.0.1",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-uglify": "^2.0.1",
+    "gulp-util": "^3.0.8",
+    "gulp-vueify": "0.0.3",
+    "jquery": "^3.1.1",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "lodash": "^4.17.4",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.5.0",
+    "run-sequence": "^1.2.2",
+    "through2": "^2.0.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vue": "^2.1.10",
+    "vue-hot-reload-api": "^2.0.8",
+    "vue-resource": "^1.1.2",
+    "vueify": "^9.4.0",
+    "vueify-insert-css": "^1.0.0"
+  },
+  "dependencies": {},
+  "aliasify": {
+    "aliases": {
+      "vue": "vue/dist/vue.js"
     }
+  }
 }
