--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "gulp-esformatter": "^6.1.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
-    "gulp-jade": "^1.1.0",
     "gulp-jshint": "^2.0.4",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.3.0",
+    "gulp-pug2": "0.0.2",
     "gulp-sass": "^3.1.0",
     "gulp-scss": "^1.4.0",
     "gulp-scss-lint": "^0.4.0",
