--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.3.0",
-    "gulp-pug2": "0.0.2",
+    "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-scss": "^1.4.0",
     "gulp-scss-lint": "^0.4.0",
